<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Save Time App</string>
    <string name="action_settings">Settings</string>
    <string name="text2_mess">Ahora reserve su turno:</string>
    <string name="button1_name">Reservar</string>
    <string name="text1_mess">Seleccione el tipo de gestión:</string>
    <string name="radio1">Asociación y participación.</string>
    <string name="radio2">Avisos, denuncias, sugerencias, reclamaciones.</string>
    <string name="radio3">Ayudas, subvenciones, bonificaciones.</string>
    <string name="radio4">Ciudad y vía pública.</string>
    <string name="radio5">Apertura negocios y comercio.</string>
    <string name="radio6">Deporte, educación y cultura.</string>
    <string name="title_activity_nueva_ventana">NuevaVentana</string>
    <string name="title_activity_ventana__informacion">ventana_Informacion</string>
    <string name="text3_mess">Datos de su reserva:</string>
    <string name="text4_mess">Hora de la reserva:</string>
    <string name="text5_mess">Tipo de gestión:</string>
    <string name="text6_mess">Su turno:</string>
    <string name="button2_name">Anular reserva</string>
    <string name="portada">Portada de la App</string>
    <string name="title_activity_portada">Portada</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_segunda_ventana">Segunda_ventana</string>
    <string name="texto_reserva">Reservar Turno</string>
    <string name="boton_reservar">Aceptar</string>
    <string name="boton_ver_turnos">Ver información de la reserva</string>
    <string name="texto_Tu_numero">Tu número es:</string>
    <string name="title_activity_ventana_seleccion">Ventana_seleccion</string>
    <string name="txt_Tu_turno">Su turno:</string>
    <string name="txt_Datosdelaresrva">Datos de la reserva:</string>
    <string name="txt_Horadelaresrva">Hora de la reserva:</string>
    <string name="txt_Tipogest">Tipo de gestión:</string>
    <string name="title_activity_ventana__informacion2">Ventana_Informacion2</string>
    <string name="txt_Bienvenido">¡Bienvenido!</string>
    <string name="txt_elija_opcion">Elija una opción:</string>
    <string name="ventana_seleccion">Gestión y reserva</string>
    <string name="ventana_informacion">Información</string>

</resources>
