<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text1_mess"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/asociacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1" 
            android:layout_marginLeft="15dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/avisos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2" 
            android:layout_marginLeft="15dp"/>

        <RadioButton
            android:id="@+id/ayudas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3" 
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio4"
            android:layout_marginLeft="15dp" />

        <RadioButton
            android:id="@+id/negocios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio5" 
            android:layout_marginLeft="15dp"/>

        <RadioButton
            android:id="@+id/deporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio6"
            android:layout_marginLeft="15dp" />
        
    </RadioGroup>

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/text2_mess"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="20dp"
        android:text="@string/button1_name"
        android:onClick="reservar" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="10dp"
        android:onClick="borrar"
        android:text="@string/button2_name" />

</LinearLayout>