<RelativeLayout 
    
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context=".Segunda_ventana">

    <TextView
        android:id="@+id/txt_elija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_bienve"
        android:layout_below="@+id/txt_bienve"
        android:layout_marginTop="44dp"
        android:text="@string/txt_elija_opcion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/coge_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_elija"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/texto_reserva"
        android:textColor="#00b9ff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_aceptar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coge_numero"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/boton_reservar" />

    <TextView
        android:id="@+id/ver_turnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_aceptar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/boton_ver_turnos"
        android:textColor="#00b9ff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_bienve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/txt_Bienvenido"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_aceptar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_aceptar1"
        android:layout_below="@+id/ver_turnos"
        android:layout_marginTop="29dp"
        android:text="@string/boton_reservar" />

</RelativeLayout>